--- a/thesis/tex/EEG.tex
+++ b/thesis/tex/EEG.tex
@@ -165,7 +165,7 @@ To make the detection of \glspl{VEP} easier, \glspl{SSVEP} are used. If the visu
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.7\textwidth]{ssvep.png}
-	\caption{VEPs and SSVEPs elicited by a stimuli with different frequencies~\cite[p.~259]{VEP}.}
+	\caption{VEPs and SSVEPs elicited by stimuli with different frequencies~\cite[p.~259]{VEP}.}
 	\label{fig:ssvep}
 \end{figure}
 
