--- a/thesis/tex/appendices.tex
+++ b/thesis/tex/appendices.tex
@@ -9,11 +9,11 @@
 \section{Acronyms}
 \printglossary[type=\acronymtype]
 \newpage
-\section{List of figures}
-\makeatletter
-\@starttoc{lof}% Print List of Figures
-\makeatother
-\newpage
+%\section{List of figures}
+%\makeatletter
+%\@starttoc{lof}% Print List of Figures
+%\makeatother
+%\newpage
 %\listoftables
 \section{Licence}
 \textbf{Non-exclusive licence to reproduce thesis and make thesis public}\\[1cm]
