--- a/thesis/tex/glossary.tex
+++ b/thesis/tex/glossary.tex
@@ -233,3 +233,23 @@
 	name = digital signal,
 	description = {--}
 }
+\newglossaryentry{trend}{
+	name = trend,
+	description = {--}
+}
+\newglossaryentry{detrend}{
+	name = detrend,
+	description = {--}
+}
+\newglossaryentry{mean}{
+	name = mean,
+	description = {--}
+}
+\newglossaryentry{window}{
+	name = window,
+	description = {--}
+}
+\newglossaryentry{spectral leakage}{
+	name = spectral leakage,
+	description = {--}
+}
