--- a/thesis/tikz/detrend_example.tex
+++ b/thesis/tikz/detrend_example.tex
@@ -10,7 +10,7 @@
 % 
 \begin{tikzpicture}[scale=0.9]
 
-\begin{groupplot}[group style={group size=2 by 2, horizontal sep=50pt}]
+\begin{groupplot}[group style={group size=2 by 2, horizontal sep=50pt, vertical sep=40pt}]
 \nextgroupplot[
 xmin=0, xmax=3,
 ymin=-2, ymax=4,
