Finish fixing the second chapter. Only minor changes - fixing grammar and weird sentences.

--- a/thesis/tex/glossary.tex
+++ b/thesis/tex/glossary.tex
@@ -253,3 +253,39 @@
 	name = spectral leakage,
 	description = {--}
 }
+\newglossaryentry{statistic}{
+	name = statistic,
+	description = {--}
+}
+\newglossaryentry{covariance}{
+	name = covariance,
+	description = {--}
+}
+\newglossaryentry{sample}{
+	name = sample,
+	description = {--}
+}
+\newglossaryentry{correlation}{
+	name = correlation,
+	description = {--}
+}
+\newglossaryentry{cross-correlation}{
+	name = cross-correlation,
+	description = {--}
+}
+\newglossaryentry{template matching}{
+	name = template matching,
+	description = {--}
+}
+\newglossaryentry{reference signal}{
+	name = reference signal,
+	description = {--}
+}
+\newglossaryentry{canonical correlation}{
+	name = canonical correlation,
+	description = {--}
+}
+\newglossaryentry{linear combination}{
+	name = linear combination,
+	description = {--}
+}
